get layout boxes correctly overlapping

--- a/packages/Schedulely/src/layouts/monthLayout/MonthLayout.scss
+++ b/packages/Schedulely/src/layouts/monthLayout/MonthLayout.scss
@@ -2,7 +2,7 @@
   /* We use a grid here so WeekLayout and EventLayout can inherit it's position */
   display: grid;
   /* Build container for maximum number of rows to avoid breaking out of the parent container and overlapping other content */
-  grid-template-rows: repeat(6, minmax(0, 1fr));
+  grid-template-rows: repeat(minmax(5, 6), minmax(0, 1fr));
   position: relative;
 }
 
@@ -10,4 +10,5 @@
   /* We use a grid here so WeekLayout and EventLayout can inherit it's position */
   display: grid;
   min-height: 4em; /* add a minimum to avoid the calendar from bunching up really small */
+  position: relative;
 }
